tdf#134654 sw: Alt-X - end keyboard selection too

The selection itself was cancelled, but not the fact that
a keyboard selection was "in progress".

EndSelect is slightly heavy, so wrap it in a
very lightweight if statement.

ClearMark also checks HasMark, so real purpose
in first checking it.

Change-Id: I969a694c46d92201f3c3f2121e3fa3a2af27253c